Add exercises for DefensivePrg - Refactoring (9-11)

--- a/homeworkNew/CodeTuning-TASK3/CodeTuning-TASK3.csproj
+++ b/homeworkNew/CodeTuning-TASK3/CodeTuning-TASK3.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeTuning-TASK2\CodeTuning-TASK2.csproj" />
+  </ItemGroup>
+
 </Project>
